# ChangeLog for mail-client/nail
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/nail/ChangeLog,v 1.69 2010/07/25 15:24:17 ssuominen Exp $

  25 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> nail-12.4.ebuild:
  ppc64 stable wrt #324127

  25 Jul 2010; Tobias Klausmann <klausman@gentoo.org> nail-12.4.ebuild:
  Stable on alpha, bug #324127

  15 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> nail-12.4.ebuild,
  +files/nail-12.4-openssl-1.patch:
  Fix building with OpenSSL >= 1.0.0 wrt #328363 by "thanasis".

  12 Jul 2010; Jeroen Roovers <jer@gentoo.org> nail-12.4.ebuild:
  Stable for HPPA (bug #324127).

  07 Jul 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> nail-12.4.ebuild:
  x86 stable wrt bug #324127

  27 Jun 2010; <nixnut@gentoo.org> nail-12.4.ebuild:
  ppc stable #324127

  26 Jun 2010; Christoph Mende <angelos@gentoo.org> nail-12.4.ebuild:
  Stable on amd64 wrt bug #324127

  20 Jun 2010; Christian Faulhammer <fauli@gentoo.org> nail-12.4.ebuild:
  added ~x86-freebsd, bug 324129

  20 Jun 2010; Christian Faulhammer <fauli@gentoo.org> nail-12.4.ebuild:
  added ~x86-interix, bug 324129

  20 Jun 2010; Christian Faulhammer <fauli@gentoo.org> nail-12.4.ebuild:
  Make it compilable on Prefix systems

  02 Feb 2010; Jeroen Roovers <jer@gentoo.org> nail-12.4.ebuild,
  +files/nail-12.4-debian.patch:
  Apply Debian patches. Declare _GNU_SOURCE.

  02 Feb 2010; Jeroen Roovers <jer@gentoo.org> nail-11.25-r3.ebuild,
  nail-12.4.ebuild:
  Respect CC in 11.25 too. Fix inherit for tc-export.

*nail-12.4 (02 Feb 2010)

  02 Feb 2010; Jeroen Roovers <jer@gentoo.org> +nail-12.4.ebuild:
  Version bump thanks to Andreas Niederl and many others (bug #156878).
  Respect CC (bug #244132).

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc
