@@ -1,9 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX nail-12.4-debian.patch 1060 RMD160 0df7a5654c0cc8b38570cc73fb5e8efcceaab26e SHA1 59066d0220e6ca4d86fc24c87d5f74900e149645 SHA256 57d6259bb0de14e8583fc77dbff4329ac6a9ebcd002fcc38d435d7d94db4efb8
 AUX nail-12.4-openssl-1.patch 1860 RMD160 93e57687e7a65b2751c86e83da7749df68817313 SHA1 aee47cfa611d44ecf2abf2ea79ae2e214fa57480 SHA256 0c3fbb7f23f0000a40addf20d3d41d0a8e62ec8f93172118fa8798eb45dfa2e1
 AUX nail-nosocket.patch 473 RMD160 1598331c9a0ea4fcaa6682bae9e04cb5d7bb3117 SHA1 600c8bb47a17008c992297e28e29c73fb44108ef SHA256 840a0f3f592de84d03c225ccdc6c363b4d372eb605750a0ee7e1b02320547dc9
 DIST mailx-12.4.tar.bz2 271482 RMD160 8244d04d0a0058fdbe9867ca503c7cda8d580154 SHA1 b1e105adf9d36269daf317dedf68b6e4cca404a7 SHA256 92201e769fe346bc0364c87437a330ef3c97ab3e9d7b2235b93f509e85e5716a
 DIST nail-11.25.tar.bz2 267959 RMD160 d72a5a4760cc43bcc2e9223e2eca4f0a8de7605f SHA1 dd15a5bdedb74175763ababa8be70989334963e4 SHA256 ae831aa7ebee1a348d84cb37228fe784b32c6ccf2d06edfba141de8f165515c5
 EBUILD nail-11.25-r3.ebuild 1985 RMD160 3f41c625e9647158370245bcee5616befea1fe55 SHA1 251a6b438ba909e733886680ebdb5ed4e1d588a0 SHA256 3b119bc9ac33b7e67017a740f86ea245037349ad1d9351ebeb014039be51a6c2
+EBUILD nail-12.4-r1.ebuild 2190 RMD160 2fe29cf738babb7b4ef8a3aef2c2119b74bfc353 SHA1 bba0c04eb836aeb076799504d2abc2f5891dcba1 SHA256 f659cdb897edf3647233a4ac66bbfd89c8ee0791d4bddab02fa41cd5eb219ef2
 EBUILD nail-12.4.ebuild 2301 RMD160 03bec01cb4c619291693204d209713c40bc9fd6a SHA1 66a09311b778eb5a02fffd43ec3bee7e64347347 SHA256 e4ee63df4d72802db32d92ccef61b2fcdd4d4a011189297008146fbab691a1a1
-MISC ChangeLog 9062 RMD160 ebdfe5bf70de50bafad67e27be2cc9c7efcd2596 SHA1 dd324ed5ba30b0c1442595c6743a28bdfb25ff4c SHA256 9f192a62d856ec323f2c4e9dab7a39786fb3305687187185cc94b9cf211430ae
-MISC metadata.xml 259 RMD160 7bd304e664ab666fab49794d575652f4a5e1587c SHA1 1f0507ccb185c8f48f26b7ad1cfe4df64ce01ad1 SHA256 2b207df02a39323049a95d476319fcaafda0b918c0c4e1feaab97b61ca1a93c6
+MISC ChangeLog 9350 RMD160 478c683965a81d746c5efec7be43300b0e1927c0 SHA1 a7312066c7095c01babecc394e72a3f2038b8e16 SHA256 17b3160f6ca62013e7d8ceeae03fa4df45471ea405a05ce3ea855f01718639e4
+MISC metadata.xml 712 RMD160 4acf28b606445ff08083a5ef2ff7d7d564cdb9c4 SHA1 e9791b10bc607988ad84a5e2952435597c35183d SHA256 d9d57b7a783c9ad55da9c29b6688e272a8339bbd3a2906cfdf7baf83096b8f84
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkxOET4ACgkQAiZjviIA2XiYJwCfTv0UlZtc4SPf3P4rtSJ/Wckj
+HS8AoLSMa+nQ7i6KRv2VPQNQaABmOYLv
+=xtr0
+-----END PGP SIGNATURE-----
